Easy Responses to rev 1

--- a/Scripts/Manuscript.Rmd
+++ b/Scripts/Manuscript.Rmd
@@ -62,7 +62,7 @@ corresponding author: [j.palacio\@oceans.ubc.ca](mailto:j.palacios@oceans.ubc.ca
 
 <!-- An opening sentence that states the question/problem addressed by the research AND Enough background content to give context to the study AND A brief statement of primary results AND A short concluding sentence. -->
 
-Climate change is shifting the distribution of transboundary fish stocks between neighboring countries. The time-frame of such shifts determines the extent of climate change challenges to international fisheries governance. Using global climate-fisheries model simulations, we show that, by 2030, transboundary fish stocks are projected to shift their distributions across 78% of the world’s international boundaries. By 2100, 45% of stocks will have shifted for 81% of countries under a ‘no mitigation’ scenario. Hotspots of transboundary shifts occur for countries that are highly dependent on fisheries for income, food and livelihoods. The imminent onset of transboundary shifts highlights the urgency to re-formulate international fisheries policies to limit conflict over these fish stocks. Bi- and multi-lateral actions are urgently needed as lead-time for policy change is long.
+**Climate change is shifting the distribution of shared fish stocks between neighboring countries (transboundary).** The time-frame of such shifts determines the extent of climate change challenges to international fisheries governance. Using global climate-fisheries model simulations, we show that, by 2030, transboundary fish stocks are projected to shift their distributions across 78% of the world’s international boundaries. By 2100, 45% of stocks will have shifted for 81% of countries under a ‘no mitigation’ scenario. Hotspots of transboundary shifts occur for countries that are highly dependent on fisheries for income, food and livelihoods. The imminent onset of transboundary shifts highlights the urgency to re-formulate international fisheries policies to limit conflict over these fish stocks. Bi- and multi-lateral actions are urgently needed as lead-time for policy change is long.
 
 <!-- **One-Sentence Summary** -->
 
@@ -73,7 +73,7 @@ Climate change is shifting the distribution of transboundary fish stocks between
 
 **Main Text.**
 
-Most fisheries management is poorly adapted to address species’ shifting distributions as a result of changing ocean conditions. Over the past century, human activities have dramatically altered the physical and biogeochemical conditions of the ocean, resulting in warmer, more acidic and less oxygenated waters [@IPCC:2019tn]. Marine species’ distributions reflect species’ preferences for discrete environmental conditions [@Hutchinson:1957nt]. As a result of changing ocean conditions, many marine species have shifted their distributions towards higher latitudes, deeper water or following local temperature gradients to remain within their optimal environmental “niche” [@Poloczanska:2016kk]. The biogeography of marine species is projected to continue to shift as ocean conditions change through the 21st century [@Cheung:2010dt], impacting fish stocks, fisheries production and economies [@Sumaila:2019ew]. These impacts are compromising our capacity to reach international sustainability goals under the United Nations (UN)  2030 Agenda for Sustainable Development such as Goal 14 - life below water [@UnitedNations2018; @Singh:2017ds; @Pecl:2017hu]. The projected risks of impacts can be reduced by improving the effectiveness of current fisheries management, including for species that cross international borders, also known as ‘shared stocks’ [@Pinsky:2018cb].
+Most fisheries management is poorly adapted to address species’ shifting distributions as a result of changing ocean conditions. Over the past century, human activities have dramatically altered the physical and biogeochemical conditions of the ocean, resulting in warmer, more acidic and less oxygenated waters [@IPCC:2019tn]. Marine species’ distributions reflect species’ preferences for discrete environmental conditions [@Hutchinson:1957nt]. As a result of changing ocean conditions, many marine species **are shifting** their distributions towards higher latitudes, deeper water or following local temperature gradients to remain within their optimal environmental “niche” [@Poloczanska:2016kk]. The biogeography of marine species is projected to continue to shift as ocean conditions change through the 21st century [@Cheung:2010dt], impacting fish stocks, fisheries production and economies [@Sumaila:2019ew]. These impacts are compromising our capacity to reach international sustainability goals under the United Nations (UN)  2030 Agenda for Sustainable Development such as Goal 14 - life below water [@UnitedNations2018; @Singh:2017ds; @Pecl:2017hu]. The projected risks of impacts can be reduced by improving the effectiveness of current fisheries management, including for species that cross international borders, also known as ‘shared stocks’ [@Pinsky:2018cb].
 
 The concept of shared stocks was developed following the ratification of the United Nations Convention on the Law of the Sea (UNCLOS) and the claiming of Exclusive Economic Zones (EEZs) by Coastal States [@UnitedNations:1986tl]. As defined by the UN's Food and Agriculture Organization, shared stocks can be classified into four non-exclusive categories: (*i*) transboundary stocks, which cross neighboring EEZs; (*ii*) straddling stocks that, in addition to neighboring EEZs, also visit the adjacent high seas; (*iii*) highly migratory stocks, mainly tunas and bill-fishes, that migrate across vast oceanic regions including both the high seas and EEZs; and (*iv*) discrete stocks that are only present in the high seas [@Munro:2004th]. This study focuses on transboundary stocks exploited by fisheries operating within EEZs. Under UNCLOS, countries are responsible for the management of stocks within their EEZs and encouraged to cooperate when stocks are shared  [@UnitedNations:1986tl]. A recent study estimates that there are 633 transboundary fish species globally, representing 67% of identified exploited taxa. Between 2005 and 2010, these species yielded an annual average of 48 million tonnes of catch and USD 78 billion in fishing revenue [@PalaciosAbrantes:2020tv].
 
@@ -83,7 +83,7 @@ Here, we employ a mechanistic population dynamic model driven by output from a c
 
 **Identifying range shifts in the shared distribution of transboundary stocks**
 
-Our results suggest that 4,119 transboundary stocks will experience a range shift beyond historical variability as early as 2006 and up to 2100 (Fig. \@ref(fig:toeFigure1)A). This corresponds to 45% of the studied stocks (Fig. \@ref(fig:toeFigure1)C). The average year of shift in the shared distribution of these stocks in all EEZs analyzed is projected to be 2036 (s.d. of all species, $\pm$ 28 years). Furthermore, 81% of the world’s EEZs will experience at least one transboundary stock shift between 2006 and 2100 with 78% having recorded a distributional shift in stocks by the UN 2030 Agenda’s deadline (i.e., year 2030) (Fig. \@ref(fig:toeFigure1)C).
+**Our results suggest that 4,119 transboundary stocks will experience a range shift beyond historical variability by 2100 (hereafter referred to as ‘shifts’; Fig. \@ref(fig:toeFigure1)A), with the first shift occurring as early as 2006.** This corresponds to 45% of the studied stocks (Fig. \@ref(fig:toeFigure1)C). The average year of shift in the shared distribution of these stocks in all EEZs analyzed is projected to be 2036 (s.d. of all species, $\pm$ 28 years). Furthermore, 81% of the world’s EEZs will experience at least one transboundary stock shift between 2006 and 2100 with 78% having recorded a distributional shift in stocks by the UN 2030 Agenda’s deadline (i.e., year 2030) (Fig. \@ref(fig:toeFigure1)C).
 
 ```{r toeFigure1, eval = T,  echo = F, fig.width = 9, fig.height=4, fig.pos= "H", fig.cap =  "**Timeline of shifts in transboundary shared stock distribution.** (A) Number of stocks (cumulative) with their distribution centroids that have shifted beyond natural variations, (B) Number of EEZs (cumulative) with the distribution centroid of at least one stock that have shifted beyond natural variations and (C) proportion of total shifting stocks and EEZs with at least one shifting stock, beyond natural variability. Dashed lines represent the year by which countries have committed to reach full implementation of the 2030 Agenda, as well as mid and late change in range shift (see Methods), respectively."}
 
@@ -148,7 +148,7 @@ Management plans that are not designed to respond to range and abundance shifts 
 
 **Potential drivers of shift and managing an uncertain future**
 
-The early projected range shifts of a large number of transboundary stocks can be partially attributed to the parallel global emergence of several ocean variables from historical variability. For example, sea surface temperature (SST) is projected to increase beyond historical variability by 2030 in 50 to 70% of the global ocean [@Rodgers:2015jq; @Frolicher:2016dg; @Mahlstein:2011fy]. Results from multiple marine ecosystem models show that SST and primary production (NPP) are the main drivers of changes in species distributions across oceanic basins [@BryndumBuchholz:2019kh; @Lotze:2019ce]. Specifically, in the species distribution model used here (see methods), SST is the main environmental driver of biomass changes in polar, tropical and upwelling ecosystems while NPP drives temperate regions’ results. The combination of the SST emergence pattern and model characteristics could be partially responsible for the early distributional shift of transboundary stocks in the tropics where marine species live close to their thermal tolerance, making them highly vulnerable to warming waters [@IPCC:2019tn], while also explaining the later, and sometimes non-existent, shifts at higher latitudes (Fig. \@ref(fig:toeFigure2)B).
+The early projected range shifts of a large number of transboundary stocks can be partially attributed to the parallel global emergence of several ocean variables from historical variability. For example, sea surface temperature (SST) is projected to increase beyond historical variability by 2030 in 50 to 70% of the global ocean [@Rodgers:2015jq; @Frolicher:2016dg; @Mahlstein:2011fy]. Results from multiple marine ecosystem models show that SST and primary production (NPP) are the main indicators of species distributional changes across ocean basins [@BryndumBuchholz:2019kh; @Lotze:2019ce]. Specifically, in the species distribution model used here (see methods), SST is the main environmental driver of biomass changes in polar, tropical and upwelling ecosystems while NPP drives temperate regions’ results. The combination of the SST emergence pattern and model characteristics could be partially responsible for the early distributional shift of transboundary stocks in the tropics where marine species live close to their thermal tolerance, making them highly vulnerable to warming waters [@IPCC:2019tn], while also explaining the later, and sometimes non-existent, shifts at higher latitudes (Fig. \@ref(fig:toeFigure2)B).
 
 Different levels of uncertainty exist in the projected emergence of environmental variables mainly related to *i*) climate change scenarios and *ii*) model structure [@Frolicher:2016dg]. First, our analysis is based on a high emission scenario (RCP 8.5) representing an "extreme" case of shifts in the shared distribution of transboundary species. Thus, any mitigation efforts (e.g., RCP 2.6) could result in a substantial delay in distribution shifts as environmental signals are sensitive to mitigation, at least after the middle of the $21^{st}$ century [@Frolicher:2016dg]. Second, a substantial source of uncertainty is related to model selection for both climate change and fish distribution. This is specifically important for early time periods (e.g., 2016-2035) where the uncertainty related to model selection, including the parameterization of poorly understood processes that regulate NPP changes, is often larger than the uncertainty stemming from the climate change scenario [@Frolicher:2016dg]. While such uncertainty could potentially be reduced by incorporating ensemble simulations from a range of different ESMs, these are computationally expensive simulations [@Frolicher:2009ge; @Frolicher:2016dg; @Rodgers:2015jq] that are only just becoming available [@Deser:2020bj] and cannot address limitations of process level understanding. As a consequence, transboundary fisheries managers are facing changes in stocks’ shared distributions embedded in complex uncertainties and will likely continue to do so in the coming decade. This is critical for the tropics, where the shared distribution of transboundary stocks is expected to shift the earliest, the response of the base of the food web to climate change is most uncertain [@Tagliabue:2020hd; @Kwiatkowski:2020cf]. These uncertainties also affect the projection of species distributions [@Lotze:2019ce; @BryndumBuchholz:2019kh]. Overall, changes in fish biomass with multiple upper trophic level models show overall agreement across models in terms of direction of change, but variability in the magnitude of that change [@Lotze:2019ce]. Further research that reduces uncertainty in the NPP response at the base of ocean food webs, alongside large ensemble simulations of multiple species distribution models could lead to a smaller structural uncertainty of fish and fisheries models [@BryndumBuchholz:2019kh]. Another important source of uncertainty in this study is the utilization of political boundaries (EEZ) to define stocks. While this method might define some stocks that do not necessarily align with biologically-defined sub-populations within an EEZ, in many EEZs, fisheries are often managed at the species level [@MAP:2017uf] and sub-populations are potentially interconnected [@Ramesh:2019va], thus, providing additional ecological ground for our analysis [@Dunn:2019ca]. Reproducing our analysis regionally, where spatially explicit stock data is available would allow to generate better constrained results and potentially identity different types of shared stock shifts at meta-population level [@Link:2010ei; @Archambault:2016ie]. Addressing these uncertainties systematically can serve as a roadmap for future studies to provide additional information to inform policy towards sustainable and equitable international fisheries management under climate change.
 
